--- a/MiIngresoHitss/Views/Products/Index.cshtml
+++ b/MiIngresoHitss/Views/Products/Index.cshtml
@@ -2,15 +2,16 @@
 
 @{
     ViewData["Title"] = "Productos";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Productos</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-success">Registrar nuevo Producto</a>
+    <a asp-action="Create" class="btn btn-outline-success">Agregar nuevo Producto</a>
 </p>
-<table class="table table-striped">
-    <thead class="table-dark">
+<table class="table">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Producto)
@@ -19,11 +20,9 @@
                 @Html.DisplayNameFor(model => model.Descripcion)
             </th>
             <th>
-               ($)@Html.DisplayNameFor(model => model.Valor)
+                @Html.DisplayNameFor(model => model.Valor)
             </th>
-            <th>
-               Opciones
-            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -39,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.Valor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-outline-secondary">Editar</a> 
-                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-outline-info">Detalles</a> 
-                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-outline-danger">Borrar</a>  
+                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-outline-warning">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-outline-info">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-outline-danger">Eliminar</a>
             </td>
         </tr>
 }
