--- a/MiIngresoHitss/Views/Shared/_Layout.cshtml
+++ b/MiIngresoHitss/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Product" asp-action="Index">Productos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Productos</a>
                         </li>
                     </ul>
                 </div>
