--- a/MiIngresoHitss/Views/Home/Privacy.cshtml
+++ b/MiIngresoHitss/Views/Home/Privacy.cshtml
@@ -1,6 +1,80 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Politia de privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>1. El Operador respeta la legislación vigente en materia de protección de datos personales, en especial la Ley N°19628 sobre
+    Protección de la Vida Privada, adoptando las medidas técnicas y organizativas necesarias en cada momento para proteger dichos
+    datos personales, teniendo en cuenta el estado de la tecnología, la naturaleza de los datos y los riesgos a los que están
+    expuestos.</p>
+<p>2. La información proporcionada por el Usuario en un formulario o de cualquier otra forma vía el Servicio Web será utilizada
+    por el Operador para proporcionar el Servicio que el Usuario haya accedido a través del Servicio Web, 
+    conforme a los términos y condiciones aplicables a dicho Servicio.</p>
+
+<p>3. Los datos personales que, en su caso, proporcione el Usuario en un formulario o de cualquier otra forma vía el Servicio 
+    Web se incorporarán a una base de datos del Operador, a efectos de prestarle el Servicio al Usuario.</p>
+
+<p>4. En ocasiones, sociedades relacionadas al Grupo SME SpA o sus representantes podrán utilizar la información proporcionada 
+    por el Usuario con fines comerciales o para informarle sobre productos y servicios que podrían interesarle, por cualquier 
+    medio, incluido el correo electrónico y/o medio equivalente. El Usuario tendrá la oportunidad de especificar si desea recibir 
+    esta información por medio de la correspondiente casilla incluida en el formulario de Registro.</p>
+
+<p>5. Los datos personales del Usuario pueden ser transferidos a otras filiales SME SpA y a terceros con quienes sea imprescindible
+    compartirlos a la hora de prestar el Servicio (por ejemplo, proveedores de servicios de hosting), para los fines establecidos 
+    anteriormente y a efectos de administración del grupo, transferencia que el Usuario consiente expresamente. Lo anterior podría
+    implicar la transferencia de los datos fuera del territorio nacional. Algunos destinatarios de estos datos podrían estar ubicados
+    en países donde las leyes sobre privacidad difieren de las vigentes en Chile. Sin embargo, podemos garantizarle la aplicación de 
+    todas las medidas necesarias para proteger la privacidad y la seguridad de sus datos.</p>
+
+<p>6. Nos comprometemos a proteger su privacidad. Su información personal se guarda en archivos informáticos seguros y no se 
+    procesará para ningún propósito ajeno a los establecidos en esta Política de Privacidad. Únicamente el personal autorizado 
+    puede acceder al servidor (“Servidor”) que el Operador utiliza para archivar esta información. Adicionalmente, este Servidor 
+    está conectado a Internet mediante un servidor de seguridad (firewall) y, por lo tanto, no es accesible al público.</p>
+
+<p>7. Se instalarán pequeñas fracciones de información (“Cookies”) en su equipo para recopilar información estadística como, 
+    por ejemplo, rutas de exploración, número de visitas, visitas repetidas y visitas por página. Una Cookie sólo puede contener
+    información proporcionada por el Usuario. No puede leer datos guardados en su disco duro. Las cookies nos ayudan a determinar 
+    la utilidad de la información que proporcionamos, así como la facilidad de uso de nuestro Servicio Web. El Operador no comparte
+    la información recopilada a partir de Cookies con entidades ajenas a él ni la vende a terceras partes. Si prefiere no recibir
+    Cookies de nuestro Servicio de Internet, puede configurar su explorador de modo que muestre alertas de forma previa a la 
+    instalación y pueda rechazarlas. También puede desactivar por completo la función de Cookies para bloquear su uso. No necesita
+    tener la función de cookies activada para utilizar cualquier sección del Servicio Web .</p>
+
+<p>8. El Usuario tiene los derechos de acceso, cancelación, rectificación y oposición en relación con sus datos, 
+    mediante el uso del vínculo apropiado a su perfil o el envío de una solicitud a info@zyght.com, si ha proporcionado 
+    sus datos al Operador.</p>
+
+<p>9. El Operador sólo conservará sus datos personales durante el período necesario para proporcionarle el Servicio solicitado
+    o durante cualquier período adicional que exija la ley. El Operador se reserva el derecho de modificar esta Política de 
+    Privacidad cuando lo estime oportuno. Le informaremos sobre cualquier cambio material relacionado con el uso que hacemos
+    de sus datos personales.</p>
+
+<p>10. Obtención de Información Personal de Menores de Edad. El Operador no pretende obtener información de ni entablar ninguna 
+    transacción con personas menores de edad o, lo que es lo mismo, que no cuenten con dieciocho (18) años cumplidos. 
+    Nuestras bases de datos pueden, sin embargo, contener información personal de menores de edad debido a que no siempre es posible 
+    determinar con precisión la edad de los Usuarios. En la medida de lo posible, al solicitarle que nos proporcionen su edad, 
+    bloqueamos el Servicio si la persona es menor de edad. Llevamos a cabo esfuerzos razonables para depurar de nuestras 
+    bases de datos aquella información correspondiente a menores de edad.
+La política del Operador es requerir que los menores no accedan a nuestro Servicio sin el previo consentimiento de sus padres o 
+tutores, a menos que así lo permita la legislación aplicable. La aceptación de esta Política implica que usted es mayor de edad y 
+capaz de aceptar y obligarse al amparo de de los términos y condiciones de este documento.</p>
+
+<p>11. Propiedad Intelectual. Se deja expresa constancia que la propiedad intelectual, comercial, e industrial del contenido, 
+    diseños, gráficas, sistemas, incluidos hardware y software, respecto del Servicio Web y/o Servicios son de exclusiva propiedad 
+    del Operador.
+Se encuentra prohibida la reproducción total o parcial del Sitio sin el permiso expreso y por escrito del Operador.
+Asimismo queda totalmente prohibida la copia, reproducción, adaptación, modificación, distribución, comercialización, comunicación 
+pública y/o cualquier otra acción que comporte una infracción de la normativa vigente en Chile y/o internacionalmente en materia 
+de propiedad intelectual y/o industrial, así como el uso de los contenidos del Sitio si no es con la previa autorización expresa y 
+por escrito del Operador. Adicionalmente, se prohíbe la exhibición o utilización, cualquiera que sea su forma, de las marcas 
+comerciales o los logotipos del Operador o del grupo SME SpA sin el consentimiento previo y por escrito del Operador.</p>
+
+<p>12. Divisibilidad. Si alguna disposición de estas Condiciones es considerada inválida por un tribunal de jurisdicción 
+    competente, la invalidez de dicha disposición no afectará la validez de las disposiciones restantes de estas Condiciones, 
+    las cuales permanecerán en pleno vigor y efecto.</p>
+
+<p>13. SME SpA. SME SpA es una sociedad por acciones con domicilio social en Santiago de Chile. El nombre de dominio 
+    titularidad de SME SpA. es www.zyght.com. Su correo electrónico de contacto es info@zyght.com</p>
+
+<p>14. Ley aplicable y Jurisdicción. Estas Condiciones se rigen por la ley chilena. Cualquier controversia relativa a las
+    presentes Condiciones se somete a la competencia exclusiva de los Tribunales Ordinarios de Justicia de la comuna de Santiago.</p>
