--- a/MiIngresoHitss/Views/ListProd/Index.cshtml
+++ b/MiIngresoHitss/Views/ListProd/Index.cshtml
@@ -1,15 +1,17 @@
 ﻿@model IEnumerable<MiIngresoHitss.Models.Product>
 
 @{
-    ViewData["Title"] = "Productos";
+    ViewData["Title"] = "Inicio";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Productos</h1>
+<div class="text-center">
+    <h1 class="display-4">Bienvenido Administrador</h1>
+    <h3 class="display-4">A continuación, encontraras nuestra gran variedad de productos, y podras comprar el que desees.</h3> 
+</div>
 
-<p>
-    <a asp-action="Create" class="btn btn-outline-success">Agregar nuevo Producto</a>
-</p>
+<h1>Lista de Productos</h1>
+
 <table class="table table-striped table-hover">
     <thead class="table-dark">
         <tr>
@@ -38,9 +40,6 @@
                 @Html.DisplayFor(modelItem => item.Valor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-outline-warning">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-outline-info">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-outline-danger">Eliminar</a>
             </td>
         </tr>
 }
