--- a/MiIngresoHitss/Views/Products/Details.cshtml
+++ b/MiIngresoHitss/Views/Products/Details.cshtml
@@ -8,7 +8,7 @@
 <h1>Detalles de</h1>
 
 <div>
-    <h4>Product</h4>
+    <h4>Producto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
