--- a/MiIngresoHitss/Views/Shared/_Layout.cshtml
+++ b/MiIngresoHitss/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <style type="text/css">
         body{
-            background-color: #FEDADA;
+            background-color: #FFF0ED;
         }
     </style>
     <header>
@@ -25,7 +25,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="ListProd" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Productos</a>
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MiIngresoHitss - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - MiIngresoHitss - <a asp-area="" asp-controller="Home" asp-action="Privacy">Politicas de Privacidad</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
